Navbar alignment hot fix

--- a/websiteStyles.CSS
+++ b/websiteStyles.CSS
@@ -600,7 +600,8 @@ body {
     display: none;
   }
   .navbar {
-    position: relative;
+    /* align-items: center; */
+    position: fixed;
   }
 }
 
